rust/dbn-macros/tests/ui/csv_serialize_invalid_dbn_attr.stderr
error: unrecognized dbn attr argument unknown
 --> tests/ui/csv_serialize_invalid_dbn_attr.rs:6:11
  |
6 |     #[dbn(unknown)]
  |           ^^^^^^^
